Added 2 new posts, fixed config error

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ paginate: 15
 baseurl: /
 domain_name: 'http://yourblog-domain.com'
 google_analytics: 'UA-XXXXXXXX-X'
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 
 # Details for the RSS feed generator
 url:            'blog url'
