--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 name: JstHack BLog
+author: Cosmin Haims
 description: UI & UX | Product Design | Front-End Dev
 meta_description: "Cosmin Haims's personal blog about product design, ui, user experience, and fron-end development. "
+
 
 markdown: kramdown
 highlighter: pygments
@@ -13,4 +15,4 @@ plugins: [jekyll-paginate]
 
 # Details for the RSS feed generator
 url:            'blog url'
-author:         'Your Name'
+author:         'Cosmin Haims'
