Fixed header name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: </JstHack>
+name: JstHack
 author: Cosmin Haims
 description: UI & UX | Product Design | Front-End Dev
 meta_description: "Cosmin Haims's personal blog about product design, ui, user experience, and fron-end development. "
